--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
-                                        <img src="assets/img/test.png" alt="My Image">
+                                        <img src="assets/img/test.png" alt="My Image" style="max-width: 100%; height: 100%">>
                                     </div>
                                 </div>
                             </div>
