--- a/iphone/esim.html
+++ b/iphone/esim.html
@@ -25,8 +25,8 @@ function img_resize(img){
  
 <table border=0 cellpadding=0 cellspacing=0>
 <tr>
-        <td><img src="../assets/img/esimsetting-ios.png" border=0 onLoad="img_resize(this);"></td>
-        <td><img src="../assets/img/dualsimsetting-ios.png" border=0 onLoad="img_resize(this);"></td>  
+        <td><img src="../assets/img/esimsetting-ios.png" border=0 onLoad="img_resize(this);"></td><br>
+        <td><img src="../assets/img/dualsimsetting-ios.png" border=0 onLoad="img_resize(this);"></td><br> 
 </tr>
 </table>
  
